# TallinAI

./: README.md  pyproject.toml
data/: events.json  inventory.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  data.js  index.css
frontend/src/components/: EventsPage.jsx  Header.jsx  Icons.jsx  Inventory.css  InventoryPage.jsx  MediaUpload.jsx  OSS.jsx  ProductRow.jsx  RTSPPlayer.jsx  RTSPViewer.jsx  Sidebar.jsx  StreamViewer.jsx  Table.jsx  combine.jsx  dashboard.jsx
knowledge/: inventory_overview.md  operational_guidelines.md  sample_events.json  sku_catalog.csv
src/tallin/: agents.py  api.py  app.py  crew.py  data.py  report.py
src/tallin/config/: agents.yaml  tasks.yaml
src/tallin/pipeline/: mllm.py  preprocess.py
src/tallin/tools/: inventory_tools.py
