[project]
name = "tallin"
version = "0.1.0"
description = "tallin for stocktaking"
authors = [{ name = "Anni Z", email = "annizhengcheng.nz@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=4.0.0,<5.0.0"
]

[project.scripts]
tallin = "tallin.main:run"
run_crew = "tallin.main:run"
train = "tallin.main:train"
replay = "tallin.main:replay"
test = "tallin.main:test"
report = "tallin.report:main"
api = "tallin.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
