[project]
name = "tallin"
version = "0.1.0"
description = "tallin for stocktaking"
authors = [{ name = "Anni Z", email = "annizhengcheng.nz@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "clip==1.0",
    "datrie==0.8.2",
    "Flask==3.1.0",
    "moviepy==2.1.1",
    "nltk==3.8.1",
    "numpy==2.2.3",
    "ollama==0.4.7",
    "onnxruntime==1.15.1",
    "opencv-python==4.8.0.76",
    "opencv-python-headless==4.10.0.84",
    "pandas==1.5.3",
    "pymilvus==2.5.3",
    "scenedetect==0.6.5",
    "schedule==1.2.2",
    "torch==2.2.2",
    "tqdm==4.66.2",
    "transformers==4.44.2",
    "ultralytics==8.1.34",
    "Flask-Cors",
    "requests",
    "google-genai",
]

[project.scripts]
tallin = "tallin.main:run"
run_crew = "tallin.main:run"
train = "tallin.main:train"
replay = "tallin.main:replay"
test = "tallin.main:test"
report = "tallin.report:main"
api = "tallin.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
